--- a/templates/tilescans.html
+++ b/templates/tilescans.html
@@ -426,7 +426,7 @@
   <h1 style="margin-bottom: 0.5rem;">Tilescans</h1>
   <div style="text-align: left; margin-bottom: 2rem; position: relative; display: inline-block; margin-left: 24px;">
     <img src="https://media.githubusercontent.com/media/michaeff/Bleo-website/refs/heads/main/static/overview/kmc_description.png" alt="KMC Description" class="kmc-description-img" style="max-width: 1100px; width: 90vw; min-width: 350px; display: block;">
-    <img src="https://media.githubusercontent.com/media/michaeff/Bleo-website/refs/heads/main/static/overview/kmc_gif.gif" alt="KMC Animation" style="position: absolute; top: 160px; right: 280px; max-width: 300px; width: 20vw; min-width: 150px; z-index: 10;">
+    <img src="/static/overview/kmc_gif.gif" alt="KMC Animation" style="position: absolute; top: 160px; right: 280px; max-width: 300px; width: 20vw; min-width: 150px; z-index: 10;">
   </div>
 
   <!-- Week 0 -->
