--- a/templates/week_detail.html
+++ b/templates/week_detail.html
@@ -318,7 +318,7 @@
         <h3>Video</h3>
         <div class="video-viewer">
           <video controls>
-            <source src="https://media.githubusercontent.com/media/michaeff/Bleo-website/refs/heads/main/static/videos/week0/week0.mp4" type="video/mp4">
+            <source src="/static/videos/week0/week0.mp4" type="video/mp4">
             Your browser does not support the video tag.
           </video>
         </div>
@@ -365,7 +365,7 @@
         <h3>Video</h3>
         <div class="video-viewer">
           <video controls>
-            <source src="https://media.githubusercontent.com/media/michaeff/Bleo-website/refs/heads/main/static/videos/week{{ week }}/kmc1/week{{ week }}_kmc1.mp4" type="video/mp4">
+            <source src="/static/videos/week{{ week }}/kmc1/week{{ week }}_kmc1.mp4" type="video/mp4">
             Your browser does not support the video tag.
           </video>
         </div>
@@ -411,7 +411,7 @@
         <h3>Video</h3>
         <div class="video-viewer">
           <video controls>
-            <source src="https://media.githubusercontent.com/media/michaeff/Bleo-website/refs/heads/main/static/videos/week{{ week }}/kmc2/week{{ week }}_kmc2.mp4" type="video/mp4">
+            <source src="/static/videos/week{{ week }}/kmc2/week{{ week }}_kmc2.mp4" type="video/mp4">
             Your browser does not support the video tag.
           </video>
         </div>
@@ -457,7 +457,7 @@
         <h3>Video</h3>
         <div class="video-viewer">
           <video controls>
-            <source src="https://media.githubusercontent.com/media/michaeff/Bleo-website/refs/heads/main/static/videos/week{{ week }}/kmc3/week{{ week }}_kmc3.mp4" type="video/mp4">
+            <source src="/static/videos/week{{ week }}/kmc3/week{{ week }}_kmc3.mp4" type="video/mp4">
             Your browser does not support the video tag.
           </video>
         </div>
@@ -504,7 +504,7 @@
         <h3>Video</h3>
         <div class="video-viewer">
           <video controls>
-            <source src="https://media.githubusercontent.com/media/michaeff/Bleo-website/refs/heads/main/static/vessel/week{{ week }}/healthy_venule/week{{ week }}.mp4" type="video/mp4">
+            <source src="/static/vessel/week{{ week }}/healthy_venule/week{{ week }}.mp4" type="video/mp4">
             Your browser does not support the video tag.
           </video>
         </div>
@@ -550,7 +550,7 @@
         <h3>Video</h3>
         <div class="video-viewer">
           <video controls>
-            <source src="https://media.githubusercontent.com/media/michaeff/Bleo-website/refs/heads/main/static/vessel/week{{ week }}/fibrotic_venule/week{{ week }}.mp4" type="video/mp4">
+            <source src="/static/vessel/week{{ week }}/fibrotic_venule/week{{ week }}.mp4" type="video/mp4">
             Your browser does not support the video tag.
           </video>
         </div>
@@ -596,7 +596,7 @@
         <h3>Video</h3>
         <div class="video-viewer">
           <video controls>
-            <source src="https://media.githubusercontent.com/media/michaeff/Bleo-website/refs/heads/main/static/vessel/week{{ week }}/healthy_arteriole/week{{ week }}.mp4" type="video/mp4">
+            <source src="/static/vessel/week{{ week }}/healthy_arteriole/week{{ week }}.mp4" type="video/mp4">
             Your browser does not support the video tag.
           </video>
         </div>
@@ -642,7 +642,7 @@
         <h3>Video</h3>
         <div class="video-viewer">
           <video controls>
-            <source src="https://media.githubusercontent.com/media/michaeff/Bleo-website/refs/heads/main/static/vessel/week{{ week }}/fibrotic_arteriole/week{{ week }}.mp4" type="video/mp4">
+            <source src="/static/vessel/week{{ week }}/fibrotic_arteriole/week{{ week }}.mp4" type="video/mp4">
             Your browser does not support the video tag.
           </video>
         </div>
